--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tesla Clone</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -51,13 +51,13 @@
 
 
     <div class="content">
-        <div class="side-menu ">
+        <div class="side-menu">
             <div>
                 <label for="chk-menu"><span class="material-symbols-outlined">close</span></label>
 
             </div>
             <nav>
-                <ul class="buyuk-ekran">
+                <ul class="desktop-sidebar">
                     <li><a href="">Test Surusu</a></li>
                     <li><a href="">Cybertruck</a></li>
                     <li><a href="">Roadster</a></li>
@@ -72,7 +72,7 @@
                     <li><a href="">Turkce</a></li>
 
                 </ul>
-                <ul class="kucuk-ekran">
+                <ul class="mobile-sidebar">
                     <li><a href="">Model S</a></li>
                     <li><a href="">Model 3</a></li>
                     <li><a href="">Model X</a></li>
@@ -93,8 +93,8 @@
                 </ul>
             </nav>
         </div>
-        <div class="banner ">
-            <div class="navbar ">
+        <div class="banner">
+            <div class="navbar">
                 <div class="logo">
                     <a href="">
                         <svg viewBox="0 0 342 35" xmlns="http://www.w3.org/2000/svg">
@@ -103,7 +103,7 @@
                         </svg>
                        </a>
                 </div>
-                <nav class="orta-menu">
+                <nav class="navbar-menu">
                     <ul>
                         <li><a href="">Model S</a></li>
                         <li><a href="">Model 3</a></li>
@@ -112,7 +112,7 @@
                         <li><a href="">Sarj</a></li>
                     </ul>
                 </nav>
-                <nav class="son-menu">
+                <nav class="navbar-right-menu">
                     <ul>
                         <li><a href="">Hesap</a></li>
                         <label for="chk-menu">Menu</label>
@@ -121,14 +121,14 @@
 
             </div>
         </div>
-        <div class="btn-gruop">
+        <div class="btn-group">
             <button>Özel Sipariş</button>
             <button>Ek Bilgi</button>
         </div>
         
     </div>
 
-    <div class="footer1">
+    <div class="mobile-footer">
         <div>
             <ul>
                 <li><a href="">Tesla © 2023</a></li>
