--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="tesla.css">
+    
 </head>
 
 <body>
-    <input type="checkbox" id="chk-menu" class="close-btn">
+    <input type="checkbox" id="chkMenu" class="menu-close-chk">
     <div class="img1">
         <div>
             <h1>Model Y</h1>
@@ -53,7 +54,7 @@
     <div class="content">
         <div class="side-menu">
             <div>
-                <label for="chk-menu"><span class="material-symbols-outlined">close</span></label>
+                <label for="chkMenu"><span class="material-symbols-outlined">close</span></label>
 
             </div>
             <nav>
@@ -95,9 +96,9 @@
         </div>
         <div class="banner">
             <div class="navbar">
-                <div class="logo">
+                <div>
                     <a href="">
-                        <svg viewBox="0 0 342 35" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="logo" viewBox="0 0 342 35" xmlns="http://www.w3.org/2000/svg">
                             <path d="M0 .1a9.7 9.7 0 0 0 7 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 0 0 7-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 0 0 6-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 0 0-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zm0 13.8h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zm0 14.1h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zM308.5 7h26a9.6 9.6 0 0 0 7-7h-40a9.6 9.6 0 0 0 7 7z" fill="currentColor">
                             </path>
                         </svg>
@@ -115,7 +116,7 @@
                 <nav class="navbar-right-menu">
                     <ul>
                         <li><a href="">Hesap</a></li>
-                        <label for="chk-menu">Menu</label>
+                        <label for="chkMenu">Menu</label>
                     </ul>
                 </nav>
 
