--- a/index.html
+++ b/index.html
@@ -1,147 +1,219 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesla Clone</title>
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style/tesla.css">
-</head>
-
-<body>
+    <link rel="stylesheet" href="style/tesla.css?v=1">
+  </head>
+  <body>
     <input type="checkbox" id="chkMenu" class="menu-close-chk">
     <div class="img1 bg-image">
-        <div>
-            <h1>Model Y</h1>
-            <a href="">Test Sürüşü Planla</a>
-        </div>
+      <div>
+        <h1>Model Y</h1>
+        <a href="">Test Sürüşü Planla</a>
+      </div>
     </div>
     <div class="img2 bg-image">
-        <div>
-            <h1>Model 3</h1>
-        </div>
+      <div>
+        <h1>Model 3</h1>
+      </div>
     </div>
     <div class="img3 bg-image">
-        <div>
-            <h1>Model S</h1>
-        </div>
-
+      <div>
+        <h1>Model S</h1>
+      </div>
     </div>
     <div class="img4 bg-image">
-        <div>
-            <h1>Model X</h1>
-        </div>
-        <div class="footer">
-            <ul>
-                <li><a href="">Tesla © 2023</a></li>
-                <li><a href="">Gizlilik ve Mevzuat</a></li>
-                <li><a href="">İletişim</a></li>
-                <li><a href="">Kariyer</a></li>
-                <li><a href="">Konumlar</a></li>
-            </ul>
-        </div>
-
-
+      <div>
+        <h1>Model X</h1>
+      </div>
+      <div class="footer">
+        <ul>
+          <li>
+            <a href="">Tesla © 2023</a>
+          </li>
+          <li>
+            <a href="">Gizlilik ve Mevzuat</a>
+          </li>
+          <li>
+            <a href="">İletişim</a>
+          </li>
+          <li>
+            <a href="">Kariyer</a>
+          </li>
+          <li>
+            <a href="">Konumlar</a>
+          </li>
+        </ul>
+      </div>
     </div>
-
-
-
     <div class="content">
-        <div class="side-menu">
-            <div>
-                <label for="chkMenu"><span class="material-symbols-outlined">close</span></label>
-
-            </div>
-            <nav>
-                <ul class="desktop-sidebar">
-                    <li><a href="">Test Surusu</a></li>
-                    <li><a href="">Cybertruck</a></li>
-                    <li><a href="">Roadster</a></li>
-                    <li><a href="">Ticari Enerji</a></li>
-                    <li><a href="">Cihazlar</a></li>
-                    <li><a href="">Enerji</a></li>
-                    <li><a href="">Bizi Bul</a></li>
-                    <li><a href="">Etkinlikler</a></li>
-                    <li><a href="">SSS</a></li>
-                    <li><a href="">Yatirimci Iliskileri</a></li>
-                    <li><a href=""><i class="fa-solid fa-globe"></i>Turkiye</a></li>
-                    <li><a href="">Turkce</a></li>
-
-                </ul>
-                <ul class="mobile-sidebar">
-                    <li><a href="">Model S</a></li>
-                    <li><a href="">Model 3</a></li>
-                    <li><a href="">Model X</a></li>
-                    <li><a href="">Model Y</a></li>
-                    <li><a href="">Test Surusu</a></li>
-                    <li><a href="">Enerji</a></li>
-                    <li><a href="">Ticari Enerji</a></li>
-                    <li><a href="">Cihazlar</a></li>
-                    <li><a href="">Sarj</a></li>
-                    <li><a href="">Bizi Bul</a></li>
-                    <li><a href="">SSS</a></li>
-                    <li><a href="">Yatirimci Iliskileri</a></li>
-                    <li><a href="">Hesap</a></li>
-                    <li><a href="">Daha Fazla</a></li>
-                    <li><a href=""><i class="fa-solid fa-globe"></i>Turkiye</a></li>
-                    <li><a href="">Turkce</a></li>
-
-                </ul>
-            </nav>
-        </div>
-        <div class="banner">
-            <div class="navbar">
-                <div>
-                    <a href="">
-                        <svg class="logo" viewBox="0 0 342 35" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M0 .1a9.7 9.7 0 0 0 7 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 0 0 7-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 0 0 6-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 0 0-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zm0 13.8h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zm0 14.1h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zM308.5 7h26a9.6 9.6 0 0 0 7-7h-40a9.6 9.6 0 0 0 7 7z"
-                                fill="currentColor">
-                            </path>
-                        </svg>
-                    </a>
-                </div>
-                <nav class="navbar-menu">
-                    <ul>
-                        <li><a href="">Model S</a></li>
-                        <li><a href="">Model 3</a></li>
-                        <li><a href="">Model X</a></li>
-                        <li><a href="">Model Y</a></li>
-                        <li><a href="">Sarj</a></li>
-                    </ul>
-                </nav>
-                <nav class="navbar-right-menu">
-                    <ul>
-                        <li><a href="">Hesap</a></li>
-                        <label for="chkMenu">Menu</label>
-                    </ul>
-                </nav>
-
-            </div>
-        </div>
-        <div class="btn-group">
-            <button>Özel Sipariş</button>
-            <button>Ek Bilgi</button>
-        </div>
-
-    </div>
-
-    <div class="mobile-footer">
+      <div class="side-menu">
         <div>
-            <ul>
-                <li><a href="">Tesla © 2023</a></li>
-                <li><a href="">Gizlilik ve Mevzuat</a></li>
-                <li><a href="">İletişim</a></li>
-                <li><a href="">Kariyer</a></li>
-                <li><a href="">Konumlar</a></li>
-            </ul>
+          <label for="chkMenu">
+            <span class="material-symbols-outlined">close</span>
+          </label>
         </div>
-
+        <nav>
+          <ul class="desktop-sidebar">
+            <li>
+              <a href="">Test Surusu</a>
+            </li>
+            <li>
+              <a href="">Cybertruck</a>
+            </li>
+            <li>
+              <a href="">Roadster</a>
+            </li>
+            <li>
+              <a href="">Ticari Enerji</a>
+            </li>
+            <li>
+              <a href="">Cihazlar</a>
+            </li>
+            <li>
+              <a href="">Enerji</a>
+            </li>
+            <li>
+              <a href="">Bizi Bul</a>
+            </li>
+            <li>
+              <a href="">Etkinlikler</a>
+            </li>
+            <li>
+              <a href="">SSS</a>
+            </li>
+            <li>
+              <a href="">Yatirimci Iliskileri</a>
+            </li>
+            <li>
+              <a href="">
+                <i class="fa-solid fa-globe"></i>Turkiye </a>
+            </li>
+            <li>
+              <a href="">Turkce</a>
+            </li>
+          </ul>
+          <ul class="mobile-sidebar">
+            <li>
+              <a href="">Model S</a>
+            </li>
+            <li>
+              <a href="">Model 3</a>
+            </li>
+            <li>
+              <a href="">Model X</a>
+            </li>
+            <li>
+              <a href="">Model Y</a>
+            </li>
+            <li>
+              <a href="">Test Surusu</a>
+            </li>
+            <li>
+              <a href="">Enerji</a>
+            </li>
+            <li>
+              <a href="">Ticari Enerji</a>
+            </li>
+            <li>
+              <a href="">Cihazlar</a>
+            </li>
+            <li>
+              <a href="">Sarj</a>
+            </li>
+            <li>
+              <a href="">Bizi Bul</a>
+            </li>
+            <li>
+              <a href="">SSS</a>
+            </li>
+            <li>
+              <a href="">Yatirimci Iliskileri</a>
+            </li>
+            <li>
+              <a href="">Hesap</a>
+            </li>
+            <li>
+              <a href="">Daha Fazla</a>
+            </li>
+            <li>
+              <a href="">
+                <i class="fa-solid fa-globe"></i>Turkiye </a>
+            </li>
+            <li>
+              <a href="">Turkce</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="banner">
+        <div class="navbar">
+          <div>
+            <a href="">
+              <svg class="logo" viewBox="0 0 342 35" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 .1a9.7 9.7 0 0 0 7 7h11l.5.1v27.6h6.8V7.3L26 7h11a9.8 9.8 0 0 0 7-7H0zm238.6 0h-6.8v34.8H263a9.7 9.7 0 0 0 6-6.8h-30.3V0zm-52.3 6.8c3.6-1 6.6-3.8 7.4-6.9l-38.1.1v20.6h31.1v7.2h-24.4a13.6 13.6 0 0 0-8.7 7h39.9v-21h-31.2v-7h24zm116.2 28h6.7v-14h24.6v14h6.7v-21h-38zM85.3 7h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zm0 13.8h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zm0 14.1h26a9.6 9.6 0 0 0 7.1-7H78.3a9.6 9.6 0 0 0 7 7zM308.5 7h26a9.6 9.6 0 0 0 7-7h-40a9.6 9.6 0 0 0 7 7z" fill="currentColor"></path>
+              </svg>
+            </a>
+          </div>
+          <nav class="navbar-menu">
+            <ul>
+              <li>
+                <a href="">Model S</a>
+              </li>
+              <li>
+                <a href="">Model 3</a>
+              </li>
+              <li>
+                <a href="">Model X</a>
+              </li>
+              <li>
+                <a href="">Model Y</a>
+              </li>
+              <li>
+                <a href="">Sarj</a>
+              </li>
+            </ul>
+          </nav>
+          <nav class="navbar-right-menu">
+            <ul>
+              <li>
+                <a href="">Hesap</a>
+              </li>
+              <label for="chkMenu">Menu</label>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="btn-group">
+        <button>Özel Sipariş</button>
+        <button>Ek Bilgi</button>
+      </div>
     </div>
-</body>
-
+    <div class="mobile-footer">
+      <div>
+        <ul>
+          <li>
+            <a href="">Tesla © 2023</a>
+          </li>
+          <li>
+            <a href="">Gizlilik ve Mevzuat</a>
+          </li>
+          <li>
+            <a href="">İletişim</a>
+          </li>
+          <li>
+            <a href="">Kariyer</a>
+          </li>
+          <li>
+            <a href="">Konumlar</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
